--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 
 # Website settings
 title: AnimeshMandal
-description: Jack's blog,use Jekyll and github pages.
-keywords: Jack,AnimeshMandal,blog,Jekyll,github,gh-pages
+description: Animesh's blog, use Jekyll and github pages.
+keywords: Animesh, AnimeshMandal, blog, Jekyll, github, gh-pages
 baseurl:  /AnimeshMandal # if you have suburl as homepage like '/homepage', please change it to '/homepage' and your repo's name should be 'homepage'
 url: https://solitarycyborg.github.io/AnimeshMandal/ # url should be 'http://<github_username>.github.io/homepage' as before
 # url: http://127.0.0.1:4000
@@ -28,7 +28,8 @@ author:  # change following line to your infomation.
   skill_icon2:
     - name: fa-linux
     - name: icon-apache
-  desc: Solution Architect By Day , Zombie Slayer By Night.  # Describe yourself.
+  desc: Solution Architect By Day , Zombie Slayer By Night.  
+        If you ask me a question and I don't know the answer, I'm gonna tell you that I don't know. But I Bet, I know how to find the answer and I will find the answer. # Describe yourself.
 
 # comment
 disqus:  # if you wanna comment feature, go to https://disqus.com/ to get your configuration; if not, comment following two lines.
