--- a/_config.yml
+++ b/_config.yml
@@ -28,9 +28,8 @@ author:  # change following line to your infomation.
   skill_icon2:
     - name: fa-linux
     - name: icon-apache
-  desc: Solution Architect By Day , Zombie Slayer By Night.  
-        If you ask me a question and I don't know the answer, I'm gonna tell you that I don't know. But I Bet, I know how to find the answer and I will find the answer. # Describe yourself.
-
+  desc: Solution Architect By Day , Zombie Slayer By Night.  # Describe yourself.
+  
 # comment
 disqus:  # if you wanna comment feature, go to https://disqus.com/ to get your configuration; if not, comment following two lines.
   # name: jalpc
